[package]
edition = "2021"
name = "the-game-backend"
version = "0.1.0"

[package.metadata.nix]
build = true
toolchain = "nightly"

[dependencies]
futures = "0.3.21"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde"] }
warp = "0.3.2"
