[package]
edition = "2021"
name = "the-game-backend"
version = "0.1.0"

[package.metadata.nix]
build = true
app = true
toolchain = "nightly"
preCommitHooks.enable = true

[dependencies]
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.2"
